<resources>
    <string name="app_name">7 рубежей</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="desc_book">Book</string>
    <string name="tag_line">7 рубежей Единобожия</string>
    <string name="action_settings">Настройки</string>
    <string name="action_additionally">Дополнительно</string>
    <string name="action_about_us">О нас</string>
    <string name="action_rate">Оценить</string>
    <string name="action_share">Поделиться</string>
    <string name="action_night_mode">Ночной режим</string>
    <string name="about_us_text">
        <b>JMApps</b> - серия бесплатных и безрекламных андроид-приложений для мусульман.\n\n

        Вы можете следить за обновлением старых и изданием новых приложений в наших соцсетях:\n\n

        ВКонтакте: www.vk.com/JMApps\n
        Telegram: t.me/JMApps\n
        Facebook: www.facebook.com/JMAppsM\n
        Instagram: www.instagram.com/dev_muslim\n\n

        По всем вопросам, предложениям и скритикой можете писать нам на почту:
        JMAppsMuslim@gmail.com или в Telegram: t.me/dev_muslim
    </string>
    <string name="title_activity_book">Главное меню</string>
    <string name="action_arabic_text_size">Размер арабского текста</string>
    <string name="action_translation_text_size">Размер текста перевода</string>
    <string name="action_show_text_arabic">Отображение арабского текста</string>
    <string name="action_show_text_translation">Отображение текста перевода</string>
    <string name="action_chapter">Список глав</string>
    <string name="title_activity_notes">Заметки</string>
    <string name="action_add_first_note">Добавьте первую заметку</string>
    <string name="title_activity_add_note">Добавить заметку</string>
    <string name="action_add">Добавить</string>
    <string name="action_note_content">Содержимое заметки...</string>
    <string name="action_note_title">Название главы...</string>
    <string name="action_attention">Внимание!</string>
    <string name="dialog_question_add">Сохранить изменения перед выходом?</string>
    <string name="dialog_cancel">Отмена</string>
    <string name="dialog_not">Не сохранять</string>
    <string name="dialog_add">Сохранить</string>
    <string name="popup_share">Поделиться</string>
    <string name="popup_delete">Удалить</string>
    <string name="popup_delete_all">Удалить всё</string>
    <string name="dialog_deleted">Удалено</string>
</resources>